--- a/index.html
+++ b/index.html
@@ -1,82 +1,78 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil personal</title>
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
+    <title>Cajero automático</title>
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="hola.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <section class="sectionone">
-        <div class="p-3 mb-2 bg-light text-dark">
-            <div class="container text-center">
-                <div class="row justify-content-md-center">
-                    <div class="col col-lg-2">
-                        Abigail Rosenfeld
-                    </div>
-                    <div class="foto">
-                        <a href="https://www.instagram.com/como_dibujo/">
-                            <button type="button" class="btn btn-outline-info button2"><img src="perfil.png"
-                                    alt=""></button>
+    <!-- <header>Abigail Rosenfeld</header> -->
+    <div id="input"></div>
+    <div id="fondo1">
+     <button class="btn btn-outline-primary btn-outline-pink" onclick="encender()">
+        <img class="power" src="fotos/power.png" alt="">
+     </button>
+      <div id="fondo2">
+        <div class="fondo2" src="" alt="">
+     <div id="fondo7">
+        <div class="fondo7">
+     <!-- fondo4 -->
+     <section id="section1">
+     <input id="inputdepositar" type="text" placeholder="monto a depositar">
+     <button class="btn btn-outline-primary btn-outline-pink"onclick="depositar()">
+        DEPOSITAR
+     </button>
+    </section>
+    <section id="section2">
+     <input id="input1" type="text" placeholder="monto a retirar">
+     <button class="btn btn-outline-primary btn-outline-pink" onclick="retirarAhora()">
+        RETIRAR
+     </button>
+     </section>
+      </div>
+     </div>
+     <!-- <div id="fondo5">
+        <div class="fondo5">< -->
+     <!-- fondo5 -->
+     <!-- <button class="botonazul"onclick="botonazul()">
+        BOTON AZUL
+     </button> -->
+     </div>
+       </div>
+     <div id="fondo6">
+        <div class="fondo">
+     <!-- fondo6 -->
+     <!-- <button onclick="retirartarjeta()">
+        RETIRA TU TARJETA
+     </button> -->
+     </div>
+     </div>
 
-                        </a>
+    <!-- <section class="cajero">
+        <div id="grid">
+            <div id="insertatutarjeta">
+                <button onclick="encender()">
+                    <img class="power" src="fotos/power.png" alt="">
+                </button>
+                <div id="myDIV">
+                    <div class="fondo2">
                     </div>
-                    <div class="col col-lg-2">
-                        <button type="button" class="btn btn-outline-info button1">Seguir</button>
-                    </div>
+ 
                 </div>
             </div>
-    </section>
-    <section class="row">
-        <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-            <div class="card-header">Sobre mí</div>
-            <div class="card-body">
-                <p class="card-text">Hola! soy Abigail, tengo 17 y estudio en el Colegio Olamí ORT.</p>
+            <div id="saldoactual">
+                <button class="boton2" onclick="insertartarjeta()">
+                    INSERTAR TARJETA</button>
+                    <div id="myDIV">
+                        <div class="fondo3">
+                        </div>
             </div>
-        </div>
-        <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-            <div class="card-header">Intereses</div>
-            <div class="card-body">
-                <p class="card-text">Me gusta el dibujo, la pintura, la música y la cerámica.</p>
-            </div>
-        </div>
-        <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-            <div class="card-header">Carrera</div>
-            <div class="card-body">
-                <p class="card-text">Quiero dedicarme al arte y la animación, para cine o para videojuegos. Voy a
-                    estudiar ilustración y animación.</p>
-            </div>
-        </div>
-    </section>
-    <section class="row">
-        <div class="col-6"><iframe width="560" height="315" src="https://www.youtube.com/embed/0OuAcAfy0YY"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe></div>
-        <div class="col-6">
-            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@como_dibujo/video/7188693729404882181"
-                data-video-id="7188693729404882181" style="max-width: 605px;min-width: 325px;">
-                <section> <a target="_blank" title="@como_dibujo"
-                        href="https://www.tiktok.com/@como_dibujo?refer=embed">@como_dibujo</a> Haciendo un filtro con
-                    procreate <a title="procreate" target="_blank"
-                        href="https://www.tiktok.com/tag/procreate?refer=embed">#procreate</a> <a title="digitalart"
-                        target="_blank" href="https://www.tiktok.com/tag/digitalart?refer=embed">#digitalart</a> <a
-                        title="fyp" target="_blank" href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a
-                        title="filter" target="_blank" href="https://www.tiktok.com/tag/filter?refer=embed">#filter</a>
-                    <a title="artistatiktok" target="_blank"
-                        href="https://www.tiktok.com/tag/artistatiktok?refer=embed">#artistatiktok</a> <a title="art"
-                        target="_blank" href="https://www.tiktok.com/tag/art?refer=embed">#art</a> <a target="_blank"
-                        title="♬ original sound - sped up sounds"
-                        href="https://www.tiktok.com/music/original-sound-7175031936111479595?refer=embed">♬ original
-                        sound - sped up sounds</a> </section>
-            </blockquote>
-            <script async src="https://www.tiktok.com/embed.js"></script>
-        </div>
-    </section>
+    </section> -->
+    <script src="script.js">
+    </script>
 </body>
-
 </html>
